# req2run-benchmark

./: CLAUDE.md  Dockerfile  EVALUATION_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  mkdocs.yml  req2run-additional-problems.md  req2run-benchmark-spec.md  req2run-evaluation-framework.md  requirements.txt  setup.py
.github/workflows/: ci.yml  evaluate.yml
adapters/universal/: Dockerfile  bench
baselines/AUTH-010/: Dockerfile  README.md  requirements.txt
baselines/AUTH-011/: Dockerfile  README.md  requirements.txt
baselines/CHAIN-001/: Dockerfile  README.md  requirements.txt
baselines/CLI-001/: README.md
baselines/CLI-010/: Dockerfile  README.md  requirements.txt
baselines/CLI-011/: Dockerfile  README.md  requirements.txt
baselines/CRYPTO-001/: Dockerfile  README.md  (+1 more)
baselines/DB-001/: Cargo.toml  Dockerfile  README.md
baselines/DB-001/config/: database.yaml
docs/: AE_FRAMEWORK_INTEGRATION.md  AE_FRAMEWORK_QUICKSTART.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMPONENTS.md  CONTRIBUTING.md  DEPENDENCY_TROUBLESHOOTING.md  ENVIRONMENT_SETUP.md  PROBLEM_CATALOG.md  README.md  REPOSITORY_STRUCTURE.md  SETUP_AND_TROUBLESHOOTING.md  SYSTEM_OVERVIEW.md  USAGE_GUIDE.md  implementation-guide.md  index.md  leaderboard-design.md  metrics.md  multi-language-roadmap.md  nfr-evaluation.md  problem-schema.yaml  test-authoring.md
req2run/: __init__.py  api.py  cli.py  core.py  metrics.py  reporter.py  runner.py
scripts/: setup-env.bat  setup-env.ps1  setup-env.sh
tests/: __init__.py  test_core.py  test_integration.py
(+313 files in other folders)
