[package]
name = "db001"
version = "1.0.0"
edition = "2021"
authors = ["Req2Run Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Data structures
bytes = "1.5"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
indexmap = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# SQL parsing
nom = "7.1"
sqlparser = "0.41"

# Networking
hyper = { version = "1.1", features = ["full"] }
tower = "0.4"
tonic = "0.10"
prost = "0.12"

# Storage
rocksdb = { version = "0.21", optional = true }
sled = { version = "0.34", optional = true }

# Logging and metrics
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"
tempfile = "3.8"
pretty_assertions = "1.4"

[features]
default = ["rocksdb-backend"]
rocksdb-backend = ["rocksdb"]
sled-backend = ["sled"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"

[[bench]]
name = "btree"
harness = false

[[bench]]
name = "mvcc"
harness = false

[[bench]]
name = "tpcc"
harness = false